# storage/api-docs/api-docs.json
@@ -617,12 +617,12 @@
                     }
                 ]
             },
-            "post": {
+            "put": {
                 "tags": [
                     "Company Policies"
                 ],
-                "summary": "Create a leave type for a company",
-                "operationId": "3d3dd9735ac812b4671535d88be80d51",
+                "summary": "Update multiple leave types for a company",
+                "operationId": "68b39872635b42a89af0776952de5e4b",
                 "parameters": [
                     {
                         "name": "company",
@@ -640,35 +640,46 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "name",
-                                    "allocation_value",
-                                    "allocation_unit",
-                                    "is_paid"
+                                    "leave_types"
                                 ],
                                 "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "Annual Leave"
-                                    },
-                                    "allocation_value": {
-                                        "type": "integer",
-                                        "example": 21
-                                    },
-                                    "allocation_unit": {
-                                        "type": "string",
-                                        "example": "days"
-                                    },
-                                    "is_paid": {
-                                        "type": "boolean",
-                                        "example": true
-                                    },
-                                    "requires_proof": {
-                                        "type": "boolean",
-                                        "example": false
-                                    },
-                                    "is_active": {
-                                        "type": "boolean",
-                                        "example": true
+                                    "leave_types": {
+                                        "type": "array",
+                                        "items": {
+                                            "required": [
+                                                "name",
+                                                "allocation_value",
+                                                "allocation_unit"
+                                            ],
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "format": "uuid",
+                                                    "example": "00000000-0000-0000-0000-000000000000"
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Annual Leave"
+                                                },
+                                                "allocation_value": {
+                                                    "type": "integer",
+                                                    "example": 21
+                                                },
+                                                "allocation_unit": {
+                                                    "type": "string",
+                                                    "example": "days"
+                                                },
+                                                "requires_proof": {
+                                                    "type": "boolean",
+                                                    "example": false
+                                                },
+                                                "is_active": {
+                                                    "type": "boolean",
+                                                    "example": true
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
                                     }
                                 },
                                 "type": "object"
@@ -677,8 +688,8 @@
                     }
                 },
                 "responses": {
-                    "201": {
-                        "description": "Leave type created successfully",
+                    "200": {
+                        "description": "Leave types updated successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -688,7 +699,10 @@
                                             "example": true
                                         },
                                         "data": {
-                                            "type": "object"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -702,27 +716,16 @@
                         "sanctum": []
                     }
                 ]
-            }
-        },
-        "/api/companies/{company}/leave-types/{leaveType}": {
-            "put": {
+            },
+            "post": {
                 "tags": [
                     "Company Policies"
                 ],
-                "summary": "Update a leave type for a company",
-                "operationId": "abfc6485a954e64695047e34aa396f15",
+                "summary": "Create multiple leave types for a company",
+                "operationId": "6b9d1a167568cbab0b8720d491285ee6",
                 "parameters": [
                     {
                         "name": "company",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    },
-                    {
-                        "name": "leaveType",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -736,30 +739,42 @@
                     "content": {
                         "application/json": {
                             "schema": {
+                                "required": [
+                                    "leave_types"
+                                ],
                                 "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "Annual Leave"
-                                    },
-                                    "allocation_value": {
-                                        "type": "integer",
-                                        "example": 21
-                                    },
-                                    "allocation_unit": {
-                                        "type": "string",
-                                        "example": "days"
-                                    },
-                                    "is_paid": {
-                                        "type": "boolean",
-                                        "example": true
-                                    },
-                                    "requires_proof": {
-                                        "type": "boolean",
-                                        "example": false
-                                    },
-                                    "is_active": {
-                                        "type": "boolean",
-                                        "example": true
+                                    "leave_types": {
+                                        "type": "array",
+                                        "items": {
+                                            "required": [
+                                                "name",
+                                                "allocation_value",
+                                                "allocation_unit"
+                                            ],
+                                            "properties": {
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Annual Leave"
+                                                },
+                                                "allocation_value": {
+                                                    "type": "integer",
+                                                    "example": 21
+                                                },
+                                                "allocation_unit": {
+                                                    "type": "string",
+                                                    "example": "days"
+                                                },
+                                                "requires_proof": {
+                                                    "type": "boolean",
+                                                    "example": false
+                                                },
+                                                "is_active": {
+                                                    "type": "boolean",
+                                                    "example": true
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
                                     }
                                 },
                                 "type": "object"
@@ -768,8 +783,8 @@
                     }
                 },
                 "responses": {
-                    "200": {
-                        "description": "Leave type updated successfully",
+                    "201": {
+                        "description": "Leave types created successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -779,7 +794,10 @@
                                             "example": true
                                         },
                                         "data": {
-                                            "type": "object"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "object"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -1263,8 +1281,8 @@
                 "tags": [
                     "Companies"
                 ],
-                "summary": "تحديث سياسة الحضور والإعدادات الجغرافية للبصمة",
-                "description": "يقوم هذا الـ API بحفظ سياسات أوقات العمل للشركة بالإضافة إلى إحداثيات المقر الجغرافي ونصف قطر نطاق التواجد المسموح به للموظفين لتسجيل الحضور.",
+                "summary": "تحديث سياسة الحضور",
+                "description": "يقوم هذا الـ API بحفظ سياسات أوقات العمل للشركة.",
                 "operationId": "6128e14a9c1d912a118d16e7bea2d378",
                 "parameters": [
                     {
@@ -1287,12 +1305,7 @@
                                     "work_end_time",
                                     "allowed_late_minutes",
                                     "allowed_early_leave_minutes",
-                                    "work_days",
-                                    "minimum_daily_hours",
-                                    "allows_overtime",
-                                    "allowed_perimeter",
-                                    "latitude",
-                                    "longitude"
+                                    "allows_overtime"
                                 ],
                                 "properties": {
                                     "work_start_time": {
@@ -1311,21 +1324,61 @@
                                         "type": "integer",
                                         "example": 15
                                     },
-                                    "work_days": {
-                                        "type": "array",
-                                        "items": {
-                                            "type": "string",
-                                            "example": "monday"
-                                        }
-                                    },
-                                    "minimum_daily_hours": {
-                                        "type": "integer",
-                                        "example": 8
-                                    },
                                     "allows_overtime": {
                                         "type": "boolean",
                                         "example": true
-                                    },
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Attendance policy updated successfully"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/companies/{company}/attendance-location": {
+            "put": {
+                "tags": [
+                    "Companies"
+                ],
+                "summary": "تحديث إعدادات موقع البصمة",
+                "description": "يقوم هذا الـ API بحفظ إحداثيات المقر الجغرافي ونصف قطر نطاق التواجد المسموح به للموظفين لتسجيل الحضور.",
+                "operationId": "30369277834538be82887f8f757dd738",
+                "parameters": [
+                    {
+                        "name": "company",
+                        "in": "path",
+                        "description": "معرف الشركة",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "allowed_perimeter",
+                                    "latitude",
+                                    "longitude"
+                                ],
+                                "properties": {
                                     "allowed_perimeter": {
                                         "type": "integer",
                                         "example": 150
@@ -1348,7 +1401,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Attendance policy updated successfully"
+                        "description": "Attendance location updated successfully"
                     },
                     "422": {
                         "description": "Validation Error"
